--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ flask-cors==6.0.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+gunicorn==21.2.0
 MarkupSafe==3.0.2
 platformdirs==3.11.0
 PyMySQL==1.1.1
